fixed alignment of community programs

--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -418,9 +418,7 @@ clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 
 .communitycontent {
   width: 100%;
-/*  height: 50%;*/
-  margin-top: 5%;
-  margin: 0 auto;
+  padding: 8% 0 0 8%;
 
 }
 
